Update
1) Reworked stream handling. Try with resource should be used now in most places.

2) Fixed various issues identified by sonar.

3) Switched to a newer sonar version (i.e. 7.9.1). Ant scripts and libraries are updated.

4) Marked superfluous stream helper classes as deprecated. Remove eventually.